Fix full bleed section psuedo element positioning for narrower views

--- a/style.css
+++ b/style.css
@@ -379,6 +379,7 @@ main a.button:hover {
 	content: "";
 	height: 100%;
 	position: absolute;
+	top: 0;
 	width: calc(50vw - 50%);
 }
 
